# airflow_k8s

./:  README.md  README.md  go.mod  pyproject.toml  requirements.yml
    .github  /workflows/: ruff.yml
.github/workflows/: pylint.yml  ruff.yml
cmd/: main.ipynb  main.py
